# time_series_project_ind2616

./: .gitignore  LICENSE  pyproject.toml
data/raw/: state_coordinates.xlsx  wind_speed_2024.xlsx  wind_speed_outdated.xlsx
notebooks/: eda_notebook.ipynb  test_hybrid_models.ipynb  test_models.ipynb  update_dataset.ipynb
